# mask_to_coco

./: CMakeLists.txt  LICENSE  README.md
howto/: install_opencv_4_0_1.sh  install_opencv_dep.sh
include/: Annotation.h  Base64.h  Flags.h  HeaderDefine.h  Main.hpp  Shape.h  Versionning.h
src/: Base64.cpp  Main.cpp
src/python_train_inference/: sample_eval.py  sample_test.py  sample_train.py  visualize.py
src/test/: Test_Annotation_Coco.cpp  Test_Mask_To_Annotation_Coco.cpp
